<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovaViagemActivity">

    <TextView
        android:id="@+id/textDestinoViagem"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="328dp"
        android:layout_marginRight="328dp"
        android:text="@string/destino"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_destino"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDestinoViagem" />

    <TextView
        android:id="@+id/textTipoViagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="273dp"
        android:layout_marginRight="273dp"
        android:text="@string/tipo_viagem"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_destino" />

    <RadioButton
        android:id="@+id/id_lazer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="190dp"
        android:layout_marginRight="190dp"
        android:text="@string/lazer"
        app:layout_constraintEnd_toStartOf="@+id/id_negocios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTipoViagem" />

    <RadioButton
        android:id="@+id/id_negocios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="65dp"
        android:text="@string/negocios"
        app:layout_constraintStart_toEndOf="@+id/id_lazer"
        app:layout_constraintTop_toBottomOf="@+id/id_destino" />

    <TextView
        android:id="@+id/textDataViagem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:text="@string/data_chegada"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textDataViagem2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_lazer" />

    <TextView
        android:id="@+id/textDataViagem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="36dp"
        android:text="@string/data_saida"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textDataViagem1"
        app:layout_constraintTop_toBottomOf="@+id/id_negocios" />

    <EditText
        android:id="@+id/id_datachegada"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/id_datasaida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDataViagem1" />

    <EditText
        android:id="@+id/id_datasaida"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/id_datachegada"
        app:layout_constraintTop_toBottomOf="@+id/textDataViagem2" />

    <TextView
        android:id="@+id/textOrcamentovViagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="303dp"
        android:layout_marginRight="303dp"
        android:text="@string/orcamento"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_datachegada" />

    <EditText
        android:id="@+id/id_orcamento"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOrcamentovViagem" />

    <TextView
        android:id="@+id/textNPessoasViagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="278dp"
        android:layout_marginRight="278dp"
        android:text="@string/num_pessoas"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_orcamento" />

    <EditText
        android:id="@+id/id_numeropessoas"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="233dp"
        android:layout_marginRight="233dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNPessoasViagem" />

    <Button
        android:id="@+id/id_botaoviagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginBottom="17dp"
        android:text="@string/botao_nova_viagem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_numeropessoas" />

</android.support.constraint.ConstraintLayout>