<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GastoActivity">

    <TextView
        android:id="@+id/textTipoGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="345dp"
        android:layout_marginRight="345dp"
        android:text="@string/tipo_gasto"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textValorGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="188dp"
        android:layout_marginRight="188dp"
        android:text="@string/valor_gasto"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textDataGasto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_tipogasto" />

    <EditText
        android:id="@+id/id_tipogasto"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTipoGasto" />

    <EditText
        android:id="@+id/id_valorgasto"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/id_datagasto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textValorGasto" />

    <EditText
        android:id="@+id/id_datagasto"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/id_valorgasto"
        app:layout_constraintTop_toBottomOf="@+id/textDataGasto" />

    <TextView
        android:id="@+id/textDataGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="189dp"
        android:layout_marginLeft="189dp"
        android:layout_marginTop="33dp"
        android:text="@string/data_gasto"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textValorGasto"
        app:layout_constraintTop_toBottomOf="@+id/id_tipogasto" />

    <TextView
        android:id="@+id/textDescricaoGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="306dp"
        android:layout_marginRight="306dp"
        android:text="@string/descricao_gasto"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_valorgasto" />

    <EditText
        android:id="@+id/id_descricaogasto"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescricaoGasto" />

    <EditText
        android:id="@+id/id_localgasto"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLocalGasto" />

    <TextView
        android:id="@+id/textLocalGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="339dp"
        android:layout_marginRight="339dp"
        android:text="@string/local_gasto"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_descricaogasto" />

    <Button
        android:id="@+id/id_botaogasto"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:text="@string/botao_gastei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_localgasto" />
</android.support.constraint.ConstraintLayout>