<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">


    <ImageView
        android:id="@+id/id_novogasto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="265dp"
        android:layout_marginRight="265dp"
        android:src="@mipmap/dollars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/id_novaviagem"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:src="@mipmap/baggage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/id_novogasto"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/id_minhasviagens"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="168dp"
        android:src="@mipmap/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_novogasto" />

    <ImageView
        android:id="@+id/id_configuracao"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:src="@mipmap/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/id_minhasviagens"
        app:layout_constraintTop_toBottomOf="@+id/id_novaviagem" />

    <TextView
        android:id="@+id/text_novogasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="247dp"
        android:layout_marginRight="247dp"
        android:text="@string/novo_gasto"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_novogasto" />

    <TextView
        android:id="@+id/text_novaviagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/nova_viagem"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_novogasto"
        app:layout_constraintTop_toBottomOf="@+id/id_novaviagem" />

    <TextView
        android:id="@+id/text_minhasviagens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="231dp"
        android:layout_marginRight="231dp"
        android:text="@string/minhas_viagens"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_minhasviagens" />

    <TextView
        android:id="@+id/text_configuracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/configuracao"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_minhasviagens"
        app:layout_constraintTop_toBottomOf="@+id/id_configuracao" />

</android.support.constraint.ConstraintLayout>